# biglist

./: .gitignore  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  Dockerfile  LICENSE  README.md  README.rst  check-code  make-release  pyproject.toml  requirements-test.txt  run  run-tests  setup.cfg
archive/: code.py
docs/: code.py  conf.py  index.rst
src/biglist/: __init__.py  _base.py  _biglist.py  _multiplexer.py  _parquet.py  _serializer.py  _util.py  _view.py
tests/: test_base.py  test_biglist.py  test_docs.py  test_multiplexer.py  test_parquet.py  test_util.py
