[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "biglist"
authors = [
    {name = "Zepu Zhang", email = "zepu.zhang@gmail.com"},
]
dependencies = [
    "upathlib >= 0.7.1",
    "deprecation",
    "mpservice >= 0.11.9",
    "pyarrow >= 10.0.0",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ['version', 'description']


[project.urls]
Source = "https://github.com/zpz/biglist"


[project.optional-dependencies]
doc = [
    "sphinx < 6.0.0",
    "numpydoc",
    "pydata-sphinx-theme < 0.13.0",
]
gcs = [
    "upathlib[gcs] >= 0.7.1b6",
    "google-auth",
]
parquet = []
test = [
    "boltons",
    "mypy",
    "ruff",
    "pytest-asyncio",
]

# `parquet` option become empty in 0.7.5 because `arrow` became mandatory.


[tool.ruff]
target-version = "py38"
select = ["E", "F", "I001"]  # isort
ignore = ["E501"]  # line length


[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-sv --log-cli-level info -p no:cacheprovider --tb=short"


[tool.coverage.report]
fail_under = 85
show_missing = true
skip_empty = true


[tool.coverage.run]
data_file = "/tmp/.coverage"

