[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "biglist"
authors = [
    {name = "Zepu Zhang", email = "zepu.zhang@gmail.com"},
]
dependencies = [
    "upathlib >= 0.7.7",
    "deprecation",
    "mpservice >= 0.11.9",
    "pyarrow >= 10.0.0",
    "typing-extensions",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ['version', 'description']


[project.urls]
Source = "https://github.com/zpz/biglist"


[project.optional-dependencies]
zstandard = ["zstandard"]
lz4 = ["lz4"]
doc = [
    "sphinx",
    "numpydoc",
    "pydata-sphinx-theme",
]
gcs = [
    "upathlib[gcs] >= 0.7.7",
    "google-auth",
]
parquet = []
test = [
    "boltons",
    "mypy",
    "ruff",
    "pytest-asyncio",
]

# `parquet` option became empty in 0.7.5 because `arrow` became mandatory.
# To be removed later.


# See https://beta.ruff.rs/docs/rules/
[tool.ruff]
target-version = "py38"
select = ["E", "F", "S", "I001"]  # isort
ignore = ["E501", "S101", "S102", "S103", "S104", "S108", "S301", "S311", "S608"]


[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-sv --log-cli-level info -p no:cacheprovider --tb=short --durations 3"


[tool.coverage.report]
fail_under = 85
show_missing = true
skip_empty = true


[tool.coverage.run]
source = ["biglist"]
data_file = "/tmp/.coverage"

