[metadata]
name = biglist
version = attr: biglist.__version__
url = https://github.com/zpz/biglist
description = Package biglist
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

# `name` must be the name of the package directory in `src/`.
# `__version__` is defined in the `__init__.py` file of the package.


[options]
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >= 3.7
install_requires=
    upathlib >=0.4.0,<0.5.0
    orjson


[options.packages.find]
where = src


[options.package_data]
biglist = py.typed
